# playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
bsd_compat/: CMakeLists.txt
bsd_compat/include/: bsd_compat.h  confdefs.h
bsd_compat/src/: setmode.c
